--- a/util/index.html
+++ b/util/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="src/editor.css">
+    <link rel="stylesheet" href="/util/styles.css">
+    <link rel="stylesheet" href="/src/editor.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="src/editor.js"></script>
-    <script src="src/main.js"></script>
+    <script src="/src/editor.js"></script>
+    <script src="/util/main.js"></script>
 </head>
 <body onload="load()">
     <div id="test">
